# clinflow-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yml
models/: model.joblib
results/: metrics.json
src/clinflow/: config.py  logging_utils.py  pipeline.py
src/clinflow/data/: clean.py  cli_eda.py  download_data.py  load.py  query.py  to_sqlite.py
src/clinflow/models/: io.py  train.py  train_model_cli.py
src/clinflow_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_clean.py  test_config.py  test_data.py  test_io.py  test_load_data.py  test_models.py  test_pipeline.py  test_train.py
