[project]
name = "clinflow-api"
version = "0.1.0"
description = "Clinical risk prediction service"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.3.3,<3",
    "numpy>=2.0.2,<3",
    "scikit-learn>=1.6.1,<2",
    "fastapi>=0.122.0,<1",
    "uvicorn>=0.38.0,<1",
    "pyyaml>=6.0.3,<7",
    "joblib>=1.5.2,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2,<9",
    "pytest-cov>=4.0.0,<5",
]

[project.scripts]
clinflow = "clinflow.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true